@@ -1,5 +1,9 @@
 2010-08-09  Sergio Martin <sergio.martin@artica.es>
 
+	* extensions/agents_modules.php: Added the meaning of the colours
+
+2010-08-09  Sergio Martin <sergio.martin@artica.es>
+
 	* extensions/module_groups.php: Fixed the status colors of
 	the modules by groups matrix
 
